# mado

./: Cargo.toml  LICENSE  codecov.yaml
.github/: dependabot.yml
.github/actions/init-deno/: action.yml
.github/workflows/: build-debug-test.yml  build-release.yml  coverage.yml  rust.yml
crates/core/: Cargo.toml
crates/core/src/: client.rs  error.rs  http.rs  http_error.rs  lib.rs  manga.rs  map_error.rs  module.rs  url.rs  website_module.rs
crates/deno/: .gitignore  .prettierignore  Cargo.toml  esbuild.js  package-lock.json  package.json  rollup.config.js  rollup.config.ts  tsconfig.json
crates/deno/script/bootstrap/: 00_bootstrap.js  01_console.js
crates/deno/script/command/: lcov.js
crates/deno/script/declaration/: lib.deno_core.d.ts
crates/deno/script/js/: xmldom.d.ts  xmldom.js
crates/deno/script/module/: mangadex.ts  manganato.ts  mangashiro.ts  reaperscans.ts
crates/deno/script/test/: error.test.ts  http.test.ts  mangadex.js  mangadex.test.js  mangadex.test.ts  manganato.js  manganato.test.js  manganato.test.ts  mangashiro.test.ts  reaperscans.test.ts  util.test.ts
crates/deno/src/: chromium.rs  error.rs  http.rs  lib.rs  module.rs  runtime.rs  task.rs
crates/deno/tests/: load_test.rs  script_test.rs
crates/deno_coverage/: Cargo.toml
crates/deno_coverage/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: chapter.rs  chapter_downloader.rs  data.rs  engine.rs  image_downloader.rs  lib.rs  observer.rs  semaphore.rs  state.rs  task_downloader.rs  timeout.rs  timer.rs  watcher.rs
crates/engine/src/info/: chapter.rs  download.rs  image.rs  mod.rs  module.rs  option.rs  status.rs
crates/engine/src/scheduler/: item.rs  mod.rs  runner.rs
crates/internal/: Cargo.toml
crates/internal/src/: lib.rs
crates/mado/: Cargo.toml
crates/mado/src/: lib.rs
crates/relm/: Cargo.toml
crates/relm/src/: app.rs  chapter_list.rs  download.rs  dynamic_function.rs  gobject.rs  lib.rs  list_model.rs  list_store.rs  main.rs  manga_info.rs  task.rs  task_list.rs  vec_chapters.rs
crates/relm/src/app/: components.rs  mod.rs  model.rs  widgets.rs
crates/relm/src/chapter_list/: mod.rs  model.rs  widgets.rs
crates/relm/src/download/: mod.rs  model.rs
crates/relm/src/download/task_list/: mod.rs
crates/relm/src/manga_info/: chapter_list.rs  components.rs  mod.rs  model.rs  widgets.rs
crates/relm/src/manga_info/chapter_list/: mod.rs  widgets.rs
crates/rune/: Cargo.toml
crates/rune-macros/: Cargo.toml
crates/rune-macros/src/: lib.rs
crates/rune-macros/tests/: rune_module.rs
crates/rune/script/: mangadex.rn  manganato.rn  mock.rn  module.rn
crates/rune/script-test/: test.rs
crates/rune/script/module/: mangadex.rn
crates/rune/script/module/tool/: tool.rn
crates/rune/src/: builder.rs  chapter_task.rs  de.rs  deserializer.rs  error.rs  error_impl.rs  error_wrapper.rs  function.rs  http.rs  json.rs  lib.rs  macros.rs  module.rs  module_builder.rs  module_map.rs  option.rs  regex.rs  result.rs  rune.rs  selector.rs  send_value.rs  serializer.rs  source_loader.rs  sync.rs  test.rs  testing.rs  uuid.rs  vec.rs  vm_builder.rs  vm_error.rs
crates/rune/src/http/: client.rs  mod.rs  url.rs
crates/rune/tests/: rune.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: channel.rs  database.rs  download_chapter_images.rs  download_chapters.rs  downloads.rs  lib.rs  module.rs  query.rs  schema.rs  status.rs
libs/uuid/: Cargo.toml  README.md
libs/uuid/src/: main.rs
