[package]
name = "mado-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

serde = { version = "1.0", features = ["derive", "rc"] }

uuid = "0.8.2"

thiserror = "1.0"

url = "2.2.2"

[features]
generate-uuid = ["uuid/v4"]

[[bin]]
name = "uuid"
required-features = ["generate-uuid"]
