[package]
name = "mado-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive", "rc"] }

uuid = "0.8.2"

thiserror = "1.0"

url = "2.2.2"

futures = { version = "0.3", optional = true }
tokio = { version = "1", optional = true }
tracing = "0.1"

[features]
