[package]
name = "mado-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive", "rc"] }

uuid = "1.0"

thiserror = "1.0"

url = "2.2.2"

bytes = "1.1"

futures-core = { version = "0.3" }
tracing = "0.1"

isahc = { version = "1.7", features = ["json"] }
http = "0.2.0"
futures-lite = "1.12"

serde_json = "1.0"

mockall = { version = '0.11', optional = true}
[dev-dependencies]
mockall = { version = '0.11' }
