[package]
name = "mado-deno"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-io = "1.7"

futures-core = "0.3"
# bytes = "1.1"

serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"

deno_core = "0.153"
deno_console = "0.71"

event-listener = "2.5"

waker-fn = "1.1"

uuid = { version = "1.1", features = ["serde"] }

# don't forget to update rune-macros dependencies.
# rune = "0.10"
# rune-modules = "0.10"

# reqwest = { version = "0.11", features = ["json", "stream"] }

thiserror = "1.0"

url = "2.2"

tokio = {version = "1.12", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = { version = "0.3"  }
tracing = "0.1"

regex = "1.6"

[dependencies.mado-core]
path = "../core"
features = ["mockall"]

[dev-dependencies]
mado-deno-coverage = { path = "../deno_coverage" }
tracing-subscriber = "0.3"

# [[test]]
# name = "script"
# path = "script-test/test.rs"
# harness = false

# [dev-dependencies]
# tempfile = "3.2"

[lib]
doctest = false
