[package]
name = "mado-deno-coverage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.173"
text_lines = "0.6"
atty = "0.2"
once_cell = "1"
termcolor = "1"
typed-arena = "2"

serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
