[package]
name = "mado-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3"
async-trait = "0.1"
event-listener = "2.5.0"
async-io = "1.6.0"
pin-project = "1.0.9"

thiserror = "1.0"
anyhow = "1"
tracing = "0.1"
atomic = "0.5"
parking_lot = "0.11"
camino = "1.0"

[dependencies.tokio]
version = "1"
features = [
  "rt"
]

[dependencies.mado-core]
path = "../core"
