[package]
name = "mado-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3"
async-trait = "0.1"
event-listener = "2.5.0"
async-io = "1.7"
pin-project = "1.0"

thiserror = "1.0"
anyhow = "1"
tracing = "0.1"
atomic = "0.5"
parking_lot = "0.12"
camino = "1.0"

[dependencies.tokio]
version = "1"
features = [
  "rt"
]

[dependencies.mado-core]
path = "../core"

[dev-dependencies]
mockall = "0.11.0"
