[package]
name = "mado-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3"
async-trait = "0.1"
event-listener = "2.5.0"
async-io = "1.7"
pin-project = "1.0"

thiserror = "1.0"
anyhow = "1"
tracing = "0.1"
atomic = "0.5"
parking_lot = "0.12"
camino = "1.0"
slab = "0.4.7"
typed-builder = "0.11.0"
by_address = "1.1.0"

sanitize-filename = "0.4"

[dependencies.tokio]
version = "1"
features = [
  "rt"
]

[dependencies.mado-core]
path = "../core"

[dev-dependencies]
mockall = "0.11.0"
mado-core = { path = "../core", features = ["mockall"] }
tracing-test = "0.2"
test-log = "0.2"
httpmock  = { rev = "a39162df6c87b4d8116c6d4ea101f01675647f83", git = "https://github.com/Uskrai/httpmock", features = ["stream"]}
pin-project = "1"
tempfile = "3.0.0"
