[package]
name = "mado-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mado-engine = { path = "../engine" }
mado-core = { path = "../core" }
mado-rune = { path = "../rune" }
mado-sqlite = { path = "../sqlite" }
