[package]
name = "mado-relm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
gtk = { version = "0.4", package = "gtk4" }
gio = { version = "0.15" }

tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"

thiserror = "1.0"
async-trait = "0.1"

mado = { path = "../mado" }
# mado-engine = { path = "../engine" }
# mado-core = { path = "../core" }
# mado-rune = { path = "../rune" }
mado-deno = { path = "../deno" }
mado-sqlite = { path = "../sqlite" }
# mado-dylib = { path = "../dylib" }

[dependencies.relm4]
version = "0.4.4"
# git = "https://github.com/AaronErhardt/relm4"
# rev = "01212ccd9e6e246e622e0492734ad4b302e1f1ee"

[dependencies.relm4-macros]
version = "0.4.4"
# git = "https://github.com/AaronErhardt/relm4"
# rev = "01212ccd9e6e246e622e0492734ad4b302e1f1ee"

[dependencies.relm4-components]
version = "0.4.4"
# git = "https://github.com/AaronErhardt/relm4"
# rev = "01212ccd9e6e246e622e0492734ad4b302e1f1ee"
