[package]
name = "mado-relm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
gtk = { version = "0.5", package = "gtk4" }

tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"

thiserror = "1.0"
async-trait = "0.1"
scopeguard = "1.1.0"
slab = "0.4.7"

mado = { path = "../mado" }
# mado-engine = { path = "../engine" }
mado-core = { path = "../core", features = ["mockall"]}
# mado-rune = { path = "../rune" }
mado-deno = { path = "../deno" }
mado-sqlite = { path = "../sqlite" }
# mado-dylib = { path = "../dylib" }

[dependencies.relm4]
version = "0.5.0-rc.1"
# git = "https://github.com/AaronErhardt/relm4"
# rev = "ed48ba2a13ab9fe132af699903e7eb68063b91e0"
features = ["macros"]

[dependencies.relm4-components]
version = "0.5.0-beta.4"
# git = "https://github.com/AaronErhardt/relm4"
# rev = "ed48ba2a13ab9fe132af699903e7eb68063b91e0"

[dev-dependencies]
mockall = "0.11.0"
