[package]
name = "mado-rune-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ['full', 'extra-traits'] }
quote = "1.0"


[dev-dependencies]
rune = { git = "https://github.com/rune-rs/rune", rev = "f002e48180b8112cc7d50a2b7189bd5fcb419b65" }
rune-modules = { git = "https://github.com/rune-rs/rune", rev = "f002e48180b8112cc7d50a2b7189bd5fcb419b65", features = ["full"] }
runestick = { git = "https://github.com/rune-rs/rune", rev = "f002e48180b8112cc7d50a2b7189bd5fcb419b65" }
