[package]
name = "mado-rune-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ['full', 'extra-traits'] }
quote = "1.0"


[dev-dependencies]
rune = { git = "https://github.com/rune-rs/rune", rev = "551a671" }
rune-modules = { git = "https://github.com/rune-rs/rune", rev = "551a671", features = ["full"] }
