[package]
name = "mado-rune"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"


tracing = { git = "https://github.com/tokio-rs/tracing" }

futures-core = "0.3"
bytes = "1.1"

serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"

# git dependency is temporary for workaround rust-analyzer bug
# 
rune = { git = "https://github.com/rune-rs/rune", rev = "551a671" }
rune-modules = { git = "https://github.com/rune-rs/rune", rev = "551a671", features = ["full"] }

reqwest = { version = "0.11", features = ["json", "stream"] }

thiserror = "1.0"

lazy_static = "1.4"

url = "2.2"

regex = "1"

jsonpath_lib = "0.3"

nipper = "0.1"
tendril = "0.4"

derivative = "2.2"

[dependencies.mado-core]
path = "../core"

[dependencies.mado-rune-macros]
path = "../rune-macros"

[[test]]
name = "script"
path = "script-test/test.rs"
harness = false

[dev-dependencies]
tempfile = "3.2"
tokio = {version = "1.12", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", features = ["std"] }

[lib]
doctest = false
