[package]
name = "mado-rune"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"

futures-core = "0.3"
bytes = "1.1"

serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"

# don't forget to update rune-macros dependencies.
rune = "0.10"
rune-modules = "0.10"

reqwest = { version = "0.11", features = ["json", "stream"] }

thiserror = "1.0"

lazy_static = "1.4"

url = "2.2"

regex = "1"

jsonpath_lib = "0.3"

nipper = "0.1"
tendril = "0.4"

derivative = "2.2"

[dependencies.mado-core]
path = "../core"

[dependencies.mado-rune-macros]
path = "../rune-macros"

[[test]]
name = "script"
path = "script-test/test.rs"
harness = false

[dev-dependencies]
tempfile = "3.2"
tokio = {version = "1.12", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", features = ["std"] }

[lib]
doctest = false
