[package]
name = "mado-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mado-engine = { path = "../engine" }
futures = "0.3.0"

[dependencies.rusqlite]
git = "https://github.com/rusqlite/rusqlite.git"
branch = "master"
# version = "0.27.0"
features = [
    "uuid",
    "url",
]
