[package]
name = "mado-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mado-engine = { path = "../engine" }
crossbeam-channel = "0.5"
parking_lot = "0.12.0"

[dependencies.rusqlite]
# git = "https://github.com/rusqlite/rusqlite.git"
# branch = "master"
version = "0.28.0"
features = [
    "uuid",
    "url",
]

[dev-dependencies]
mado-core = { path = "../core", features = ["mockall"] }
uuid = { version = "1.1", features = ["v4"]}
async-trait = "0.1"
ntest = "0.8"
